[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/wing.png" type="Texture" id=1]
[ext_resource path="res://assets/hexafloob.png" type="Texture" id=2]
[ext_resource path="res://HexaFloob.gd" type="Script" id=3]
[ext_resource path="res://assets/display.png" type="Texture" id=4]
[ext_resource path="res://assets/RobotoMono-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/hexafloobcolor.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=2]
size = 184
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 79.5873, 41.0205 )

[node name="Area2D" type="Area2D"]
scale = Vector2( 0.15, 0.15 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="LeftWing" type="Sprite" parent="."]
position = Vector2( -171.437, 20.8895 )
texture = ExtResource( 1 )

[node name="RightWing" type="Sprite" parent="."]
position = Vector2( 168.258, 21.5894 )
texture = ExtResource( 1 )
flip_h = true

[node name="Color" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Display" type="Sprite" parent="."]
position = Vector2( 0, 13.2143 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Display"]
anchor_left = 0.496
anchor_top = 0.55
anchor_right = 0.5
anchor_bottom = 0.554
margin_left = -360.75
margin_top = -371.75
margin_right = -139.25
margin_bottom = -128.25
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AB"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.154549, 142.363 )
scale = Vector2( 1, 1 )
shape = SubResource( 3 )

[connection signal="area_shape_entered" from="." to="." method="_on_Area2D_area_shape_entered"]
